feat: add welcome section

--- a/src/index.html
+++ b/src/index.html
@@ -40,5 +40,19 @@
       </nav>
     </div>
   </header>
+  <main>
+    <section class="welcome">
+      <div class="content welcome__content">
+        <div class="welcome__image">
+          <img src="../assets/images/welcome__bg-image.png" alt="leafs" width="448px" height="407px">
+        </div>
+        <div class="welcome__info">
+          <h1 class="welcome__title">We grow <span>plants</span> and give you oxygen</h1>
+          <p class="welcome__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+          <a href="" class="welcome__link">learn more</a>
+        </div>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
