feat: add about section

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header class="header">
-    <div class="content header__content">
+    <div class="header__content content ">
       <div class="logo">
         <a href="" class="logo__link">
           <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -42,14 +42,25 @@
   </header>
   <main>
     <section class="welcome">
-      <div class="content welcome__content">
+      <div class="welcome__content content">
         <div class="welcome__image">
           <img src="../assets/images/welcome__bg-image.png" alt="leafs" width="448px" height="407px">
         </div>
-        <div class="welcome__info">
+        <div class="welcome__info info">
           <h1 class="welcome__title">We grow <span>plants</span> and give you oxygen</h1>
           <p class="welcome__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
           <a href="" class="welcome__link">learn more</a>
+        </div>
+      </div>
+    </section>
+    <section class="about">
+      <div class="content about__content">
+        <div class="about__info info">
+          <h2 class="about__title title">We are <span>professional experienced</span> gardeners</h2>
+          <p class="about__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
+        </div>
+        <div class="about__image">
+          <img src="../assets/images/about__bg-image.png" alt="plant" width="464px" height="479px">
         </div>
       </div>
     </section>
