feat: add service section

--- a/src/index.html
+++ b/src/index.html
@@ -64,6 +64,62 @@
         </div>
       </div>
     </section>
+    <section class="service">
+      <div class="service__content content">
+        <div class="service__header">
+          <h2 class="service__title title">Service and our projects</h2>
+          <div class="service__buttons">
+            <button class="service__button">Gardens</button>
+            <button class="service__button">Lawn</button>
+            <button class="service__button">Planting</button>
+          </div>
+        </div>
+        <div class="service__cards">
+          <div class="service__card service-card">
+            <div class="service-card__image">
+              <img src="../assets/images/garden.jpg" alt="care" width="329px" height="350px">
+            </div>
+            <h3 class="service-card__title">Garden care</h3>
+            <p class="service-card__text">Lorem Ipsum has been the industry</p>
+          </div>
+          <div class="service__card service-card">
+            <div class="service-card__image">
+              <img src="../assets/images/planting.png" alt="planting" width="329px" height="350px">
+            </div>
+            <h3 class="service-card__title">Planting</h3>
+            <p class="service-card__text">Lorem Ipsum has been the industry</p>
+          </div>
+          <div class="service__card service-card">
+            <div class="service-card__image">
+              <img src="../assets/images/lawn.jpg" alt="lawn" width="329px" height="350px">
+            </div>
+            <h3 class="service-card__title">Lawn care</h3>
+            <p class="service-card__text">Lorem Ipsum has been the industry</p>
+          </div>
+          <div class="service__card service-card">
+            <div class="service-card__image">
+              <img src="../assets/images/planting-2.jpg" alt="planting" width="329px" height="350px">
+            </div>
+            <h3 class="service-card__title">Planting</h3>
+            <p class="service-card__text">Lorem Ipsum has been the industry</p>
+          </div>
+          <div class="service__card service-card">
+            <div class="service-card__image">
+              <img src="../assets/images/garden-2.jpg" alt="care" width="329px" height="350px">
+            </div>
+            <h3 class="service-card__title">Garden care</h3>
+            <p class="service-card__text">Lorem Ipsum has been the industry</p>
+          </div>
+          <div class="service__card service-card">
+            <div class="service-card__image">
+              <img src="../assets/images/planting-3.jpg" alt="planting" width="329px" height="350px">
+            </div>
+            <h3 class="service-card__title">Planting</h3>
+            <p class="service-card__text">Lorem Ipsum has been the industry</p>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 </body>
 </html>
