feat: add prices section

--- a/src/index.html
+++ b/src/index.html
@@ -69,9 +69,9 @@
         <div class="service__header">
           <h2 class="service__title title">Service and our projects</h2>
           <div class="service__buttons">
-            <button class="service__button">Gardens</button>
-            <button class="service__button">Lawn</button>
-            <button class="service__button">Planting</button>
+            <button class="service__button button_light">Gardens</button>
+            <button class="service__button button_light">Lawn</button>
+            <button class="service__button button_light">Planting</button>
           </div>
         </div>
         <div class="service__cards">
@@ -118,6 +118,31 @@
             <p class="service-card__text">Lorem Ipsum has been the industry</p>
           </div>
         </div>
+      </div>
+    </section>
+    <section class="prices">
+      <div class="prices__content content">
+        <div class="prices__left info">
+          <h2 class="prices__title">Prices</h2>
+          <ul class="prices__items">
+            <li class="prices__item">
+              <button>Basics<span></span></button>
+            </li>
+            <li class="prices__item">
+              <button>Standard<span></span></button>
+            </li>
+            <li class="prices__item">
+              <button>Pro care<span></span></button>
+            </li>
+          </ul>
+        </div>
+        <div class="prices__right info">
+          <h3 class="prices__subtitle">Our best <span>gardeners</span> are ready to help you</h3>
+          <a href="" class="prices__link button_light">Contact us</a>
+          <div class="prices__image">
+            <img src="../assets/images/leafs.png" alt="leafs" width="152px" height="174px">
+          </div>
+        </div>  
       </div>
     </section>
   </main>
